# PCIEx_NM500

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LICENSE.note  LICENSE.ru  LICENSE.template  README.md  ntia.api.cflags  ntia.api.config  ntia.api.cxxflags  version.h
api/: ntia_api.h  ntia_api_data_types.h  ntia_api_data_types_ll.h  ntia_api_ll.h  ntia_shared_defs.h
cmake/modules/: external.txt
docs/: BUILD.md
driver/: CMakeLists.txt
driver/linux/: README.md
driver/win10-UMDFv2/: .gitignore  CMakeLists.txt  README.md  ntia-pcie-UMDFv2.inf  ntia-pcie-UMDFv2.sln  ntia-pcie-UMDFv2.vcxproj  ntia-pcie-UMDFv2.vcxproj.filters  version.h
driver/win10-UMDFv2/api/: dev_io_proto.h
driver/win10-UMDFv2/src/: device.c  device.h  driver.c  driver.h  queue.c  queue.h
examples/c/: CMakeLists.txt  ntapcie_func.c  ntapcie_func.h  ntapcie_test.c
examples/cxx/: CMakeLists.txt  dummy_cxx.cpp
examples/python/: ntia_pcie_test.py
install/linux/modprobe.d/: pci-stub.conf
install/linux/modules-load.d/: pci-stub.conf
install/linux/udev/: 99-ntia-PCIe.rules
python/: .gitignore  ntia_pcie_api.pyx  ntia_pcie_def.pxd  setup.py
scripts/: apply-EOL.sh  apply-clang-format.sh  cmake.aarch64-linux-gnu-gcc.sh  cmake.aarch64-linux-musl-gcc.sh  cmake.amd64-linux-clang.sh  cmake.amd64-linux-gcc.sh  cmake.amd64-msys2-clang.sh  cmake.amd64-msys2-gcc.sh  cmake.amd64-windows-gcc.sh  cmake.amd64-windows-msvc.cmd  cmake.arm-linux-gnueabihf-gcc.sh  cmake.arm-linux-musleabihf-gcc.sh  cmake.lnx.clang  cmake.mingw.gcc  cmake.msys2.clang  cmake.msys2.gcc  cmake.native-gcc.sh  cmake.riscv64-linux-gnu-gcc.sh  cmake.riscv64-linux-musl-gcc.sh  cmake.win.msvc  cmake.win.msvc.cmd  licenseheaders.py
src/: CMakeLists.txt  ntapcie_int.c  ntapcie_int.h  ntapcie_lib.c
src/transport/pcie/: transport_pcie.h
src/transport/pcie/lnx/: transport_sysfs.c  transport_sysfs.h
src/transport/pcie/win/: transport_umdfv2.c  transport_umdfv2.h
